@@ -99,6 +99,7 @@
 #include <tlhelp32.h>
 #include <psapi.h>
 #include <shellapi.h>
+#include <shobjidl.h>
 
 #endif
 
@@ -179,29 +180,11 @@ namespace octave
 
 #endif
 
-  // Set app id if we have the SetCurrentProcessExplicitAppUserModelID
-  // available (>= Win7).  FIXME: Could we check for existence of this
-  // function in the configure script instead of dynamically loading
-  // shell32.dll?
-
   void set_application_id (void)
   {
 #if defined (__MINGW32__) || defined (_MSC_VER)
 
-    typedef HRESULT (WINAPI *SETCURRENTAPPID)(PCWSTR AppID);
-
-    HMODULE hShell = LoadLibrary ("shell32.dll");
-
-    if (hShell)
-      {
-        SETCURRENTAPPID pfnSetCurrentProcessExplicitAppUserModelID
-          = reinterpret_cast<SETCURRENTAPPID> (GetProcAddress (hShell, "SetCurrentProcessExplicitAppUserModelID"));
-
-        if (pfnSetCurrentProcessExplicitAppUserModelID)
-          pfnSetCurrentProcessExplicitAppUserModelID (L"gnu.octave." VERSION);
-
-        FreeLibrary (hShell);
-      }
+    SetCurrentProcessExplicitAppUserModelID (L"gnu.octave." VERSION);
 
 #endif
   }
